# multi-agent-actor-patterns

./: .env.example  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
maap/: __init__.py
maap/core/: __init__.py  actor.py  dead_letter.py  errors.py  mailbox.py  supervisor.py  system.py
maap/examples/research_agent/: main.py  messages.py  supervisor.py  worker.py
maap/messages/: __init__.py  types.py
tests/core/: test_actor.py  test_dead_letter.py  test_features.py  test_supervisor.py
tests/examples/: test_research_agent.py
