[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maap"
version = "0.1.0"
description = "Multi-Agent Actor Patterns — reference implementation"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff", "mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
